2002-03-05  Paul Koning  <pkoning@equallogic.com>

	* tc-pdp11.c: Use VAX float format support for PDP-11 target.
	(parse_ac5): New function for parsing float regs in float operand.
	(parse_expression): Remove attempt to make literals be octal.
	(parse_op_no_deferred): Support float literals.
	(parse_op): Reject attempts to refer to float regs.
	(parse_fop): New function, like parse_op but for float operand.
	(md_assemble): Add cases to parse float operands.  Also fix 
	IMM3, IMM6, IMM8 cases to pick up the operand from the right spot.

2002-03-04  H.J. Lu <hjl@gnu.org>

	* config/obj-elf.c (special_section): Add .init_array,
	.fini_array and .preinit_array.

	* config/tc-ia64.h (ELF_TC_SPECIAL_SECTIONS): Remove
	.init_array and .fini_array.

2002-03-01  Jakub Jelinek  <jakub@redhat.com>

	* config/obj-elf.c (elf_copy_symbol_attributes): Don't copy
	visibility.
	(obj_frob_symbol): Copy visibility.

2002-02-28  Jakub Jelinek  <jakub@redhat.com>

	* config/tc-alpha.c (s_alpha_text): Use obj_elf_text for OBJ_ELF, not
	s_text.
	(s_alpha_data): Use obj_elf_data for OBJ_ELF, not s_data.

2002-02-27  Nick Clifton  <nickc@cambridge.redhat.com>

	* po/es.po: Updated.

2002-02-26  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (mips_need_elf_addend_fixup): For embedded-PIC
	only, undo the changes made on 2001-06-08, with the
	effect being that common or extern symbols are
	adjusted for embedded-PIC, but weak symbols are not.
	(md_estimate_size_before_relax: Likewise, with the effect
	that extern symbols are treated the same as weak symbols
	only if not embedded-PIC.
	(mips_fix_adjustable) Likewise, with the effect that
	weak or extern symbols are not adjusted for embedded-PIC.
	(md_apply_fix3): Tweak so that the case where value is zero
	is handled more correctly for embedded-PIC code.

2002-02-26  Nick Clifton  <nickc@cambridge.redhat.com>

	* doc/as.texinfo (Overview): Add missing @ifset IA64

	* configure.in (LINGUAS): Add es.po.
	* configure: Regenerate.